--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,8 @@ services:
     build: .
     image: hvolos01/hotel_app_profile_single_node_memdb
     entrypoint: profile
-    container_name: 'hotel_app_profile'
     ports:
-      - "8081:8081"
+        - "8581"
     restart: always
 
   search:
@@ -58,3 +57,11 @@ services:
         - "6831:6831/udp"
         - "6832:6832/udp"
       restart: always
+
+  nginx:
+    image: nginx:1.20.0
+    container_name: nginx
+    ports:
+      - "8581:8581"
+    volumes:
+      - ./conf/nginx.conf:/etc/nginx/nginx.conf:ro
